--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -24,6 +25,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.32",
     "react-router-dom": "^6.20.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.0"
